[ci skip] Pushing deployment files for namespace, service accounts and clusterrolebinding
Signed-off-by: StamZo <stamzom@gmail.com>

--- a/ReadMe
+++ b/ReadMe
@@ -172,7 +172,7 @@ git config --global user.name "StamZo"
 
 export KUBECONFIG=$(pwd)/build/config
 
-gcloud container clusters get-credentials bevel-cluster --zone europe-central2-a --project plooto-402607
+gcloud container clusters get-credentials bevel-cluster --zone us-central1-a --project plooto-402607
 
 #
 docker run -it -v $(pwd):/home/bevel/ --network="host" ghcr.io/hyperledger/bevel-build:latest bash
